WPP-65 support for portlet preferences storing user specific authentication credentials

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -23,3 +23,5 @@ viewResCache=false
 cas.server.base.url=http://localhost:8080/cas
 portal.server.base.url=http://localhost:8080
 portlet.context=WebProxyPortlet
+login.preferences.regex=\\{prefs\\.[^\\s]+\\}
+encryption.salt=changeMe
