--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,12 @@
             <groupId>taglibs</groupId>
             <artifactId>standard</artifactId>
         </dependency>
+        <dependency> 
+            <groupId>org.jasypt</groupId> 
+            <artifactId>jasypt</artifactId>  
+            <version>1.6</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
