--- a/pom.xml
+++ b/pom.xml
@@ -536,13 +536,19 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.2.1</version>
+                <version>2.4.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.9</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <localCheckout>true</localCheckout>
                     <tagNameFormat>WebProxyPortlet-@{project.version}</tagNameFormat>
-                    <pushChanges>false</pushChanges>
                 </configuration>
             </plugin>
             <plugin>
