--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.jasig.portlet</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>1.1.9-SNAPSHOT</version>
+    <version>1.1.9</version>
     
     <name>Web Proxy Portlet</name>
     <description>Provides web site content inclusion via a JSR-168 portlet.</description>
@@ -25,7 +25,8 @@
         <connection>scm:git:git://github.com/Jasig/WebproxyPortlet.git</connection>
         <developerConnection>scm:git:git@github.com:Jasig/WebproxyPortlet.git</developerConnection>
         <url>https://github.com/Jasig/WebproxyPortlet</url>
-    </scm>
+      <tag>WebProxyPortlet-1.1.9</tag>
+  </scm>
     
     <repositories>
         <repository>
