--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <logbackVersion>1.0.13</logbackVersion>
         <slf4jVersion>1.7.5</slf4jVersion>
         <mockito.version>1.9.5</mockito.version>
-        <portlet.mvc.util.version>1.1.2-SNAPSHOT</portlet.mvc.util.version>
+        <portlet.mvc.util.version>1.1.2</portlet.mvc.util.version>
     </properties>
 
     <dependencyManagement>
