--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
@@ -20,7 +20,8 @@
         <connection>scm:git:git://github.com/Jasig/WebproxyPortlet.git</connection>
         <developerConnection>scm:git:git@github.com:Jasig/WebproxyPortlet.git</developerConnection>
         <url>https://github.com/Jasig/WebproxyPortlet</url>
-    </scm>
+      <tag>WebProxyPortlet-2.0.0</tag>
+  </scm>
 
     <issueManagement>
         <url>${jasig-issues-base}/WPP</url>
