--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>org.jasig.parent</groupId>
         <artifactId>jasig-parent</artifactId>
-        <version>40</version>
+        <version>39</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.1.1-SNAPSHOT</version>
+    <version>2.1.1</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
@@ -20,7 +20,7 @@
         <connection>scm:git:git://github.com/Jasig/WebproxyPortlet.git</connection>
         <developerConnection>scm:git:git@github.com:Jasig/WebproxyPortlet.git</developerConnection>
         <url>https://github.com/Jasig/WebproxyPortlet</url>
-      <tag>HEAD</tag>
+      <tag>WebProxyPortlet-2.1.1</tag>
   </scm>
 
     <issueManagement>
