--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.1.1</version>
+    <version>2.1.2-SNAPSHOT</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
@@ -20,7 +20,7 @@
         <connection>scm:git:git://github.com/Jasig/WebproxyPortlet.git</connection>
         <developerConnection>scm:git:git@github.com:Jasig/WebproxyPortlet.git</developerConnection>
         <url>https://github.com/Jasig/WebproxyPortlet</url>
-      <tag>WebProxyPortlet-2.1.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <issueManagement>
