fix: add overrides context support

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>/WEB-INF/context/applicationContext.xml</param-value>
+        <param-value>/WEB-INF/context/applicationContext.xml,classpath:/properties/contextOverrides/*.xml</param-value>
     </context-param>
 
     <listener>
