--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,4 +26,4 @@ jobs:
           distribution: adopt-hotspot
           java-version: 8
       - name: Build and Test
-        run: 'mvn -B -Dmaven.javadoc.skip=true package'
+        run: 'mvn -B package'
