--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
     <properties>
         <cas.version>3.6.4</cas.version>
         <jackson.version>2.13.2</jackson.version>
+        <jackson-databind.version>2.13.2.2</jackson-databind.version>
         <jstl.version>1.1.2</jstl.version>
         <junit.version>4.13.2</junit.version>
         <commons-lang.version>2.6</commons-lang.version>
@@ -114,7 +115,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jasig.cas.client</groupId>
