--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.3.7-SNAPSHOT</version>
+    <version>2.3.7</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
@@ -40,7 +40,7 @@
         <connection>scm:git:git://github.com/Jasig/WebproxyPortlet.git</connection>
         <developerConnection>scm:git:git@github.com:Jasig/WebproxyPortlet.git</developerConnection>
         <url>https://github.com/Jasig/WebproxyPortlet</url>
-      <tag>HEAD</tag>
+      <tag>WebProxyPortlet-2.3.7</tag>
   </scm>
 
     <issueManagement>
