--- a/pom.xml
+++ b/pom.xml
@@ -418,7 +418,7 @@
                     <dependency>
                         <groupId>org.apache.maven.scm</groupId>
                         <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.13.0</version>
+                        <version>2.0.0-M3</version>
                     </dependency>
                 </dependencies>
             </plugin>
