--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.4.0</version>
+    <version>2.4.1-SNAPSHOT</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
@@ -40,7 +40,7 @@
         <connection>scm:git:https://github.com/uPortal-Project/WebproxyPortlet.git</connection>
         <developerConnection>scm:git:git@github.com:uPortal-Project/WebproxyPortlet.git</developerConnection>
         <url>https://github.com/uPortal-Project/WebproxyPortlet</url>
-        <tag>WebProxyPortlet-2.4.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
