--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -74,7 +74,7 @@
     <servlet>
         <servlet-name>ViewRendererServlet</servlet-name>
         <servlet-class>
-                org.springframework.web.servlet.ViewRendererServlet
+            com.liferay.portletmvc4spring.ViewRendererServlet
         </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
