--- a/pom.xml
+++ b/pom.xml
@@ -316,20 +316,7 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
-                <configuration>
-                    <systemproperties>
-                        <property>
-                            <name>java.util.logging.config.file</name>
-                            <value>src/test/resources/log4j.properties</value>
-                        </property>
-                    </systemproperties>
-                </configuration>
-            </plugin>
-
-            <plugin>
+                <!-- Overrides the parent pom due to the overlays -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
@@ -351,104 +338,6 @@
                     </overlays>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>surefire-report-maven-plugin</artifactId>
-                <version>2.0-beta-1</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.4.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>localdev</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.portals.pluto</groupId>
-                        <artifactId>maven-pluto-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <phase>generate-resources</phase>
-                                <goals>
-                                    <goal>assemble</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-war-plugin</artifactId>
-                        <configuration>
-                            <classifier>localdev</classifier>
-                            <warName>${project.artifactId}</warName>
-                            <webXml>${project.build.directory}/pluto-resources/web.xml</webXml>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-uportal-plugin</artifactId>
-                        <groupId>org.jasig.portal</groupId>
-                        <configuration>
-                            <contextName>${project.artifactId}</contextName>
-                            <artifactId>${project.artifactId}</artifactId>
-                            <artifactGroupId>${project.groupId}</artifactGroupId>
-                            <artifactVersion>${project.version}</artifactVersion>
-                            <artifactClassifier>localdev</artifactClassifier>
-                            <removeExistingDirectories>true</removeExistingDirectories>
-                            <extractWars>true</extractWars>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-              <id>doclint-java8-disable</id>
-              <activation>
-                  <jdk>[1.8,)</jdk>
-              </activation>
-              <build>
-                  <plugins>
-                      <plugin>
-                          <groupId>org.apache.maven.plugins</groupId>
-                          <artifactId>maven-javadoc-plugin</artifactId>
-                          <version>3.4.1</version>
-                          <configuration>
-                              <doclint>none</doclint>
-                          </configuration>
-                      </plugin>
-                  </plugins>
-              </build>
-          </profile>
-    </profiles>
-
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <configLocation>google_checks.xml</configLocation>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
