--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,24 +28,31 @@ on:
 
 jobs:
   test:
-    name: '${{ matrix.platform }} with Java ${{ matrix.java-version }}'
+    name: '${{ matrix.platform }} with Java ${{ matrix.java-distribution }} version ${{ matrix.java-version }}'
     strategy:
       matrix:
         platform:
           - ubuntu-latest
-          - windows-latest
-          - macos-latest
+        java-distribution:
+          - adopt-hotspot
+          - temurin
+          - zulu
         java-version:
           - 8
           - 11
+        include:
+          - platform: windows-latest
+            java-distribution: adopt-hotspot
+            java-version: 11
+          - platform: macos-latest
+            java-distribution: adopt-hotspot
+            java-version: 11
     runs-on: ${{ matrix.platform }}
+    timeout-minutes: 5
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up JDK
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          distribution: adopt-hotspot
+          distribution: ${{ matrix.java-distribution }}
           java-version: ${{ matrix.java-version }}
-      - name: Build and Test
-        run: 'mvn -B package'
+      - run: mvn -B test
