--- a/pom.xml
+++ b/pom.xml
@@ -479,6 +479,7 @@
                             <groupId>org.jasig.resourceserver</groupId>
                             <artifactId>resource-server-content</artifactId>
                             <includes>
+				<include>rs/jquery/1.12.2/</include>
                                 <include>rs/jquery/1.11.0/</include>
                                 <include>/rs/jqueryui/1.8.24/</include>
                                 <include>/rs/famfamfam/silk/1.3/error.png</include>
